[package]
name = "command-parser"
version = "1.0.1"
edition = "2021"
description = "parse commands for chat bots"
readme = "README.md"
documentation = "https://docs.rs/command-parser/latest"
homepage = "https://github.com/mzntori/command-parser"
repository = "https://github.com/mzntori/command-parser"
license = "MIT"
keywords = ["parser", "bot", "command"]

[dependencies]
thiserror = "1.0.61"
